# Three-Body-Problem

./: .gitignore  LICENSE.md  README.md  formatted_orbits.txt  get_orbits.py  index.html  pyproject.toml
arxiv_src/: prl.eps  suvakov_dmitrasinovic_prl.tex
initial_conditions/: data_reader.py  special.csv
three_body_problem/: testing.py  three_body_problem.py
three_body_web/: index.html  main.js
